// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ECPresentationManager addon results conversion to ECPresentation objects returns child nodes 1`] = `
Array [
  Object {
    "key": Object {
      "instanceKey": Object {
        "className": "navigating",
        "id": "0xcb1000000aa86",
      },
      "pathFromRoot": Array [
        "p1",
      ],
      "type": "ECInstanceNode",
    },
    "label": "test2",
  },
  Object {
    "key": Object {
      "pathFromRoot": Array [
        "p1",
        "p3",
      ],
      "type": "type 2",
    },
    "label": "test3",
  },
]
`;

exports[`ECPresentationManager addon results conversion to ECPresentation objects returns content 1`] = `
Content {
  "contentSet": Array [
    Item {
      "classInfo": Object {
        "id": "0x8ef40000018523",
        "label": "Syrian Pound",
        "name": "Iceland",
      },
      "displayValues": Object {
        "Borders": "Puerto Rico quantify",
      },
      "imageId": "7a09054b-67b0-4de0-85ff-9a03ba818ce3",
      "label": "Buckinghamshire clicks-and-mortar input",
      "mergedFieldNames": Array [],
      "primaryKeys": Array [
        Object {
          "className": "Berkshire",
          "id": "0x79810000017552",
        },
      ],
      "values": Object {
        "Borders": "Avon",
      },
    },
  ],
  "descriptor": Descriptor {
    "contentFlags": 0,
    "displayType": "magni eligendi nihil",
    "fields": Array [
      PropertiesField {
        "category": Object {
          "description": "Quam ad ducimus.",
          "expand": true,
          "label": "payment model Gibraltar Pound",
          "name": "Idaho",
          "priority": 13433,
        },
        "isReadonly": true,
        "label": "frame system",
        "name": "Borders",
        "priority": 73989,
        "properties": Array [
          Object {
            "property": Object {
              "classInfo": Object {
                "id": "0x6f0a00000160a8",
                "label": "transmitting Jewelery",
                "name": "encompassing",
              },
              "name": "cutting-edge",
              "type": "string",
            },
            "relatedClassPath": Array [],
          },
        ],
        "type": Object {
          "typeName": "string",
          "valueFormat": "Primitive",
        },
      },
    ],
    "selectClasses": Array [
      Object {
        "isSelectPolymorphic": true,
        "pathToPrimaryClass": Array [],
        "relatedPropertyPaths": Array [],
        "selectClassInfo": Object {
          "id": "0xf572000000d53d",
          "label": "Reactive reboot",
          "name": "Bike",
        },
      },
    ],
  },
}
`;

exports[`ECPresentationManager addon results conversion to ECPresentation objects returns content descriptor 1`] = `
Descriptor {
  "connectionId": "2c09f34d-82e3-4290-8804-56e4e17ea030",
  "contentFlags": 0,
  "contentOptions": "bar",
  "displayType": "Mills",
  "fields": Array [
    PropertiesField {
      "category": Object {
        "description": "Quibusdam alias repudiandae quo.",
        "expand": true,
        "label": "architectures web services",
        "name": "Hong Kong Dollar",
        "priority": 61251,
      },
      "editor": Object {
        "name": "transmitting",
        "params": Object {
          "some_param": 34574,
        },
      },
      "isReadonly": false,
      "label": "efficient",
      "name": "Primitive property field with editor",
      "priority": 6480,
      "properties": Array [
        Object {
          "property": Object {
            "classInfo": Object {
              "id": "0x5d0700000020dd",
              "label": "Slovenia open-source Consultant",
              "name": "Cheese",
            },
            "enumerationInfo": Object {
              "choices": Array [
                Object {
                  "label": "Frozen XSS",
                  "value": "c7170cee-ef8a-4fb4-b728-bb37d1bf458b",
                },
                Object {
                  "label": "redundant Wallis and Futuna SSL",
                  "value": "17c48398-56ad-4be5-b3cf-86f92475c6b0",
                },
              ],
              "isStrict": false,
            },
            "name": "Diverse",
            "type": "string",
          },
          "relatedClassPath": Array [],
        },
      ],
      "type": Object {
        "typeName": "string",
        "valueFormat": "Primitive",
      },
    },
    PropertiesField {
      "category": Object {
        "description": "Ea voluptas aut qui alias non.",
        "expand": false,
        "label": "repurpose Customer Ethiopia",
        "name": "SCSI",
        "priority": 65472,
      },
      "isReadonly": false,
      "label": "orchid",
      "name": "Complex array of structs property field",
      "priority": 1165,
      "properties": Array [
        Object {
          "property": Object {
            "classInfo": Object {
              "id": "0x1f2300000064bf",
              "label": "Dynamic Tunisian Dinar",
              "name": "methodical",
            },
            "kindOfQuantity": Object {
              "currentFusId": "ba46d444-1f16-4db7-b17b-4b6e06d99b6e",
              "label": "cross-platform Alabama Inverse",
              "name": "mobile",
              "persistenceUnit": "system",
            },
            "name": "redundant",
            "type": "double",
          },
          "relatedClassPath": Array [],
        },
      ],
      "type": Object {
        "memberType": Object {
          "members": Array [
            Object {
              "label": "bypass",
              "name": "migration",
              "type": Object {
                "typeName": "string",
                "valueFormat": "Primitive",
              },
            },
            Object {
              "label": "heuristic",
              "name": "demand-driven",
              "type": Object {
                "memberType": Object {
                  "typeName": "string",
                  "valueFormat": "Primitive",
                },
                "typeName": "string[]",
                "valueFormat": "Array",
              },
            },
          ],
          "typeName": "SomeClass",
          "valueFormat": "Struct",
        },
        "typeName": "string[]",
        "valueFormat": "Array",
      },
    },
    NestedContentField {
      "category": Object {
        "description": "Dignissimos voluptas repellat et nihil perferendis.",
        "expand": false,
        "label": "Dynamic Gloves",
        "name": "ADP",
        "priority": 59704,
      },
      "contentClassInfo": Object {
        "id": "0xf0560000014c3b",
        "label": "Adaptive Cotton indexing",
        "name": "intranet",
      },
      "isReadonly": true,
      "label": "vertical Savings Account",
      "name": "Nested content field",
      "nestedFields": Array [
        Field {
          "category": Object {
            "description": "Beatae quos dolor repellendus.",
            "expand": true,
            "label": "Handmade Directives",
            "name": "cross-media",
            "priority": 55394,
          },
          "isReadonly": true,
          "label": "open system",
          "name": "Simple property field",
          "priority": 76141,
          "type": Object {
            "typeName": "string",
            "valueFormat": "Primitive",
          },
        },
      ],
      "pathToPrimaryClass": Array [
        Object {
          "isForwardRelationship": true,
          "isPolymorphicRelationship": false,
          "relationshipInfo": Object {
            "id": "0x6779000000e2f7",
            "label": "Falls",
            "name": "Fresh",
          },
          "sourceClassInfo": Object {
            "id": "0xd17000000083c5",
            "label": "Virginia eco-centric",
            "name": "Handmade",
          },
          "targetClassInfo": Object {
            "id": "0x42980000013f78",
            "label": "SCSI Texas white",
            "name": "synthesizing",
          },
        },
      ],
      "priority": 67388,
      "type": Object {
        "members": Array [
          Object {
            "label": "Plastic Chief",
            "name": "extensible",
            "type": Object {
              "typeName": "string",
              "valueFormat": "Primitive",
            },
          },
        ],
        "typeName": "XML",
        "valueFormat": "Struct",
      },
    },
  ],
  "inputKeysHash": "ba6d4787-9219-4985-a66e-7bf11d320f54",
  "selectClasses": Array [
    Object {
      "isSelectPolymorphic": true,
      "pathToPrimaryClass": Array [
        Object {
          "isForwardRelationship": true,
          "isPolymorphicRelationship": false,
          "relationshipInfo": Object {
            "id": "0x17f8900000076f6",
            "label": "Gloves",
            "name": "port",
          },
          "sourceClassInfo": Object {
            "id": "0x16d160000008dd4",
            "label": "deposit time-frame",
            "name": "Chair",
          },
          "targetClassInfo": Object {
            "id": "0x857a00000014ce",
            "label": "deposit Money Market Account metrics",
            "name": "Avon",
          },
        },
      ],
      "relatedPropertyPaths": Array [
        Array [
          Object {
            "isForwardRelationship": true,
            "isPolymorphicRelationship": true,
            "relationshipInfo": Object {
              "id": "0x14fac0000005453",
              "label": "Avon",
              "name": "Handcrafted Frozen Ball",
            },
            "sourceClassInfo": Object {
              "id": "0xdd800000001170",
              "label": "black",
              "name": "Ghana",
            },
            "targetClassInfo": Object {
              "id": "0x8663000000aea5",
              "label": "hardware Nevada",
              "name": "Dobra",
            },
          },
        ],
      ],
      "selectClassInfo": Object {
        "id": "0x15d2600000041e0",
        "label": "methodology",
        "name": "Burg",
      },
    },
  ],
}
`;

exports[`ECPresentationManager addon results conversion to ECPresentation objects returns filtered node paths 1`] = `
Array [
  Object {
    "children": Array [],
    "index": 476,
    "isMarked": false,
    "node": Object {
      "backColor": "rgb(
    129,
    133,
    193
  )",
      "description": "Est id autem et assumenda sint qui dolorem.",
      "hasChildren": true,
      "isCheckboxEnabled": true,
      "isCheckboxVisible": true,
      "isChecked": true,
      "isEditable": false,
      "isExpanded": false,
      "isSelectable": false,
      "key": Object {
        "instanceKey": Object {
          "className": "Virginia",
          "id": "0x907e0000003565",
        },
        "pathFromRoot": Array [
          "4cda564e-72d1-4f91-af08-3a22e014a12b",
          "bd837548-da20-4fd9-ae67-d4afa0bd65ac",
        ],
        "type": "ECInstanceNode",
      },
      "label": "Virginia Markets",
    },
  },
]
`;

exports[`ECPresentationManager addon results conversion to ECPresentation objects returns node paths 1`] = `
Array [
  Object {
    "children": Array [],
    "index": 525,
    "isMarked": true,
    "node": Object {
      "backColor": "rgb(
    216,
    24,
    79
  )",
      "foreColor": "#C7B408",
      "hasChildren": true,
      "isCheckboxEnabled": false,
      "isCheckboxVisible": true,
      "isChecked": true,
      "isEditable": true,
      "isExpanded": false,
      "isSelectable": false,
      "key": Object {
        "instanceKey": Object {
          "className": "Wooden",
          "id": "0x96850000001e17",
        },
        "pathFromRoot": Array [
          "13de95d1-3ee4-4d0e-bb74-b87b612f22a1",
          "fbd3c2a4-b2c6-4aa5-9dcb-41b4bb04d8f6",
        ],
        "type": "ECInstanceNode",
      },
      "label": "solid state JBOD Place",
    },
  },
]
`;

exports[`ECPresentationManager addon results conversion to ECPresentation objects returns root nodes 1`] = `
Array [
  Object {
    "backColor": "backColor1",
    "description": "description1",
    "fontStyle": "fontStyle1",
    "foreColor": "foreColor1",
    "hasChildren": true,
    "imageId": "img_1",
    "isCheckboxEnabled": true,
    "isCheckboxVisible": true,
    "isChecked": true,
    "isEditable": true,
    "isExpanded": true,
    "isSelectable": true,
    "key": Object {
      "pathFromRoot": Array [
        "p1",
        "p2",
        "p3",
      ],
      "type": "type1",
    },
    "label": "test1",
  },
  Object {
    "backColor": "",
    "description": "description2",
    "fontStyle": "",
    "foreColor": "",
    "hasChildren": false,
    "imageId": "",
    "isCheckboxEnabled": false,
    "isCheckboxVisible": false,
    "isChecked": false,
    "isEditable": false,
    "isExpanded": false,
    "isSelectable": false,
    "key": Object {
      "instanceKey": Object {
        "className": "focus group",
        "id": "0x13c400000006cf7",
      },
      "pathFromRoot": Array [
        "p1",
      ],
      "type": "ECInstanceNode",
    },
    "label": "test2",
  },
  Object {
    "key": Object {
      "pathFromRoot": Array [
        "p1",
        "p3",
      ],
      "type": "some node",
    },
    "label": "test2",
  },
]
`;
